--- a/lesson-6/django_app/Dockerfile
+++ b/lesson-6/django_app/Dockerfile
@@ -5,14 +5,14 @@ RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 
 RUN apt update
 
-RUN apt install -y python3 pip
+RUN apt install -y python3
+RUN apt install -y pip
 RUN apt install -y libpq-dev
 RUN apt install -y postgresql
 
-RUN pip install Django==4 psycopg2
+RUN pip install Django==4 pytest psycopg2
 
 WORKDIR /usr/src/app
 
 RUN mkdir project
 COPY project project
-#COPY projectinit_db.py .
